# ai_gym_playground

./: README.md  generations.py  main.py  pyproject.toml  reinforcement.ipynb  test.ipynb  test_main.ipynb
logs/model_weights/: gen_10.pickle  gen_100.pickle  gen_105.pickle  gen_110.pickle  gen_115.pickle  gen_120.pickle  gen_125.pickle  gen_130.pickle  gen_135.pickle  gen_140.pickle  gen_15.pickle  gen_20.pickle  gen_25.pickle  gen_30.pickle  gen_35.pickle  gen_40.pickle  gen_45.pickle  gen_5.pickle  gen_50.pickle  gen_55.pickle  gen_60.pickle  gen_65.pickle  gen_70.pickle  gen_75.pickle  gen_80.pickle  gen_85.pickle  gen_90.pickle  gen_95.pickle
logs/stats/: gen_1.pickle  gen_10.pickle  gen_100.pickle  gen_101.pickle  gen_102.pickle  gen_103.pickle  gen_104.pickle  gen_105.pickle  gen_106.pickle  gen_107.pickle  gen_108.pickle  gen_109.pickle  gen_11.pickle  gen_110.pickle  gen_111.pickle  gen_112.pickle  gen_113.pickle  gen_114.pickle  gen_115.pickle  gen_116.pickle  gen_117.pickle  gen_118.pickle  gen_119.pickle  gen_12.pickle  gen_120.pickle  gen_121.pickle  gen_122.pickle  gen_123.pickle  gen_124.pickle  gen_125.pickle  gen_126.pickle  gen_127.pickle  gen_128.pickle  gen_129.pickle  gen_13.pickle  gen_130.pickle  gen_131.pickle  gen_132.pickle  gen_133.pickle  gen_134.pickle  (+102 more)
