[tool.poetry]
name = "ai_gym"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
gym = "^0.23.1"
tensorflow = "^2.8.0"
ipykernel = "^6.12.1"
pygame = "^2.1.2"
box2d-py = "^2.3.8"

[tool.poetry.dev-dependencies]
ipykernel = "^6.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
